# api/v1/openapi.yaml
@@ -7,54 +7,6 @@ servers:
   - url: https://api.gloo-platform-portal.com/v1
 paths:
   /client:
-    get:
-      description: Retrieves information for a specific client.
-      operationId: GetClient
-      security:
-        - identityToken: []
-      parameters:
-        - in: query
-          name: "id"
-          required: true
-          description: Client id
-          schema:
-            type: string
-        - in: query
-          name: "passthrough"
-          description: Optionally include passthrough data as a json string
-          schema:
-            type: string
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  clientName:
-                    type: string
-                    example: "example-user-pool-developer-1"
-                  clientId:
-                    type: string
-                    example: "example-resource-server-id"
-                  passthroughResponse:
-                    type: object
-          description: Successfully retrieved client information.
-        '404':
-          description: Client not found
-          content:
-              application/json:
-                schema:
-                    $ref: '#/components/schemas/Error'
-        '500':
-          description: Unexpected error querying for client information
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-      summary: Gets a client from the OpenId Connect Provider
-      tags:
-        - Clients
     post:
       description: Creates a client in the Open Id Connect Provider that the SPI (Server Provider Interface) implementation integrates with.  `glooPortalUser` and `glooPortalTeam` are optional parameters that will link the `clientId` returned with the user/team id if it is provided. In addition, if `clientMetadata` is returned, it will be stored as a json string in the database in case additional client metadata is needed in future requests to get, update, or delete the client. The `clientSecret` is never stored in the database and will only be shown to the user once. Identity token is required to validate user is associated with the given client
       operationId: CreateClient
@@ -76,7 +28,7 @@ paths:
                 passthrough:
                   type: object
       responses:
-        '200':
+        '201':
           content:
             application/json:
               schema:
@@ -149,67 +101,19 @@ paths:
       summary: Deletes a client in the OpenId Connect Provider
       tags:
         - Clients
-  /client/scopes:
-    get:
-      description: Retrieves scopes for a specific client.
-      operationId: GetClientScopes
+  /clients/{id}/scopes:
+    put:
+      description: Update Client Scopes.
+      operationId: UpdateClientScopes
       security:
         - identityToken: []
       parameters:
-        - in: query
+        - in: path
           name: "id"
           required: true
-          description: Client ID to get scopes for
+          description: (Required) Client ID to add scope to
           schema:
             type: string
-        - in: query
-          name: "passthrough"
-          description: Optionally include passthrough data as a json string
-          schema:
-            type: string
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                type: object
-                required:
-                  - scopes
-                properties:
-                  scopes:
-                    type: array
-                    items:
-                      type: string
-                  passthroughResponse:
-                    type: object
-                    example: {
-                      "ResourceServer": {
-                        "Identifier": "example-resource-server-id",
-                        "Name": "example-resource-server",
-                        "UserPoolId": "example-user-pool"
-                      }
-                    }
-          description: Successfully retrieved client scopes.
-        '404':
-          description: Client not found
-          content:
-            application/json:
-              schema:
-                  $ref: '#/components/schemas/Error'
-        '500':
-          description: Unexpected error querying for client scopes
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-      summary: Gets scopes for a client from the OpenId Connect Provider
-      tags:
-        - Clients
-    post:
-      description: Adds scope to a specific client.
-      operationId: AddClientScope
-      security:
-        - identityToken: []
       requestBody:
         description: Add scope for a specific client. Identity token is required to validate user is associated with the given client.
         required: true
@@ -218,47 +122,23 @@ paths:
             schema:
               type: object
               required:
-                - id
-                - scope
+                - scopes
               properties:
-                id:
-                  type: string
-                  example: "example-resource-server-id"
-                scope:
-                  type: string
-                  example: "example-scope"
+                scopes:
+                  type: array
+                  items:
+                      type: string
+                      example: "example-scope"
                 passthrough:
                   type: object
                   example: {
                     UserPoolId: "example-user-pool"
                   }
       responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  passthroughResponse:
-                    type: object
-                    example: {
-                      "ResourceServer": {
-                        "Identifier": "example-resource-server-id",
-                        "Name": "example-resource-server",
-                        "UserPoolId": "example-user-pool"
-                      }
-                    }
-          description: Successfully added scopes to client
         '204':
           description: Successfully added scopes to client
         '404':
           description: Client not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '409':
-          description: Scope already exists
           content:
             application/json:
               schema:
@@ -272,91 +152,7 @@ paths:
       summary: Adds scope to a client in the OpenId Connect Provider
       tags:
         - Clients
-    delete:
-      description: Delete scope from client.
-      operationId: DeleteClientScope
-      security:
-        - identityToken: []
-      parameters:
-        - in: query
-          name: "id"
-          required: true
-          description: (Required) Client ID to delete scope for
-          schema:
-            type: string
-        - in: query
-          name: "scope"
-          required: true
-          description: (Required) Scope name to delete
-          schema:
-              type: string
-        - in: query
-          name: "passthrough"
-          description: Optionally include passthrough data as a json string
-          schema:
-            type: string
-      responses:
-        '204':
-          description: Successfully deleted client.
-        '404':
-          description: Client not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '500':
-          description: Unexpected error deleting client.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-      summary: Deletes a client in the OpenId Connect Provider
-      tags:
-        - Clients
   /scopes:
-    get:
-      description: Gets scopes in the Open Id Connect Provider for a unique identifier. Different Identity Providers associate scopes with different entities. In AWS Congito the client scope would be created for a `ResourceServer` for a `UserPool`, in keycloak the client scope would be created for a `Realm`, in Okta a client scope would be created for a `Authorization Server` which is associated with a Okta `Application` via an `Access Policy`. In Auth0, a scope is created for a `ResourceServer` which is associated with your API via the API identifier.
-      operationId: GetScopes
-      security:
-        - identityToken: []
-      parameters:
-        - in: query
-          name: "passthrough"
-          description: Optionally include passthrough data
-          schema:
-            type: string
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                required:
-                  - scopes
-                type: object
-                properties:
-                  scopes:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/Scope'
-                  passthroughResponse:
-                    type: object
-                    example: {
-                      "ResourceServer": {
-                        "Identifier": "example-resource-server-id",
-                        "Name": "example-resource-server",
-                        "UserPoolId": "example-user-pool"
-                      }
-                    }
-          description: Successfully got scopes
-        '500':
-          description: Unexpected error getting scopes
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-      summary: Gets scopes in the OpenId Connect Provider
-      tags:
-        - Scopes
     post:
       description: Creates scope in the Open Id Connect Provider for a given unique identifier. Different Identity Providers associate scopes with different entities. In AWS Congito the client scope would be created for a `ResourceServer` for a `UserPool`, in keycloak the client scope would be created for a `Realm`, in Okta a client scope would be created for a `Authorization Server` which is associated with a Okta `Application` via an `Access Policy`. In Auth0, a scope is created for a `ResourceServer` which is associated with your API via the API identifier.
       operationId: CreateScope
@@ -380,7 +176,7 @@ paths:
                     UserPoolId: "example-user-pool"
                   }
       responses:
-        '204':
+        '201':
           description: Successfully created scope
         '409':
           description: Scope already exists
